--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@
 #theme: jekyll-agency
 remote_theme: raviriley/agency-jekyll-theme
 
-url    : "http://blackwingshealthyandwhole.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
-baseurl: "/BlackWingsHealthyandWhole" # the subpath of your site, e.g. /blog
+url    : "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "https://github.com/enigmaticsoulrg/BlackWingsHealthyandWhole" # the subpath of your site, e.g. /blog
 
 title      : Agency Jekyll Theme Demo
 email      : your-email@example.com #this is also the email contact forms will go to
