--- a/_data/style.yml
+++ b/_data/style.yml
@@ -4,5 +4,5 @@
 #black: "#000"
 
 #Image Customization
-header-image: "../img/header-bg.jpg"
+header-image: "../img/christina-wocintechchat-com-rCyiK4_aaWw-unsplash.jpg"
 contact-image: "../img/map-image.png"
