--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 nav:
-  - title: "Services"
-    section: services
+  - title: "Advantages"
+    section: advantages
 
   - title: "Portfolio"
     section: portfolio
